--- a/MEMDA_p1 (5).Rmd
+++ b/MEMDA_p1 (5).Rmd
@@ -1627,11 +1627,11 @@ cat("\n   • Componentes que explican >10% varianza: PC",
     paste(componentes_importantes, collapse = ", PC"), "\n", sep = "")
 ```
 
-El **análisis** de **componentes principales** sobre las **7 variables óptimas** revela una estructura dimensional bien definida. Los primeros **5 componentes** explican individualmente **más del 10% de la varianza**, acumulando **84.9%** de la **información total**.
+El **análisis** de **componentes principales** sobre las **8 variables óptimas** revela una estructura dimensional bien definida. Los primeros **5 componentes** explican individualmente **más del 10% de la varianza**, acumulando **84.9%** de la **información total**.
 
-PC1 (26.8%) emerge como la dimensión principal, capturando casi un cuarto de la variabilidad del conjunto de datos. La **distribución gradual** de la **varianza** entre los componentes indica que **ninguna** **variable** **domina** excesivamente el **análisis**, sino que **todas** **contribuyen** de manera **balanceada** a las diferentes dimensiones latentes.
+PC1 (30.9%) emerge como la dimensión principal, capturando casi un cuarto de la variabilidad del conjunto de datos. La **distribución gradual** de la **varianza** entre los componentes indica que **ninguna** **variable** **domina** excesivamente el **análisis**, sino que **todas** **contribuyen** de manera **balanceada** a las diferentes dimensiones latentes.
 
-Este resultado confirma que las **7 variables seleccionadas** por **RFE** contienen información complementaria y valiosa para el modelo, justificando la retención de múltiples componentes que capturan distintas facetas de las características musicales relevantes para predecir la popularidad.
+Este resultado confirma que las **8 variables seleccionadas** por **RFE** contienen información complementaria y valiosa para el modelo, justificando la retención de múltiples componentes que capturan distintas facetas de las características musicales relevantes para predecir la popularidad.
 
 ### 6.3.4 Crear nuevas variables (componentes)
 
@@ -1781,7 +1781,7 @@ test$pred_final <- ifelse(test$prob_zero > umbral,
 
 # Guardamos el datasets definitivos.
 train<-train[,c("speechiness","liveness_boxcox", "acousticness_boxcox", "danceability", "audio_valence","key3","song_popularity")]
-test<-test[,c("speechiness","liveness_boxcox", "acousticness_boxcox", "danceability", "audio_valence","key3","prob_zero","song_popularity")]
+test<-test[,c("speechiness","liveness_boxcox","acousticness_boxcox", "danceability", "audio_valence","key3","prob_zero","song_popularity")]
 datos<-subset(datos, select=-is_zero)
 ```
 
@@ -1837,6 +1837,39 @@ test_full<-test_full[,c("speechiness","liveness_boxcox", "acousticness_boxcox", 
 datos_full<-subset(datos_full, select=-is_zero)
 ```
 
+Creamos ahora para datos_backup
+```{r}
+# Crear variable binaria para el modelo de clasificación
+datos_backup$is_zero <- ifelse(datos_backup$song_popularity == 0, 1, 0)
+
+# Dividmos en train y test
+train_backup <- subset(datos_backup[train_index_full, ], 
+                       select = -c(ID,outlier,audio_mode,key,liveness,time_signature))
+test_backup  <- subset(datos_backup[-train_index_full, ], 
+                       select = -c(ID,outlier,audio_mode,key,liveness,time_signature))
+
+# La única transformación que mejora el modelo es la de acousticness
+train_backup$acousticness<-train_full$acousticness_boxcox
+test_backup$acousticness<-test_full$acousticness_boxcox
+
+# Entrenar un modelo clasificador para predecir ceros
+library(randomForest)
+
+modelo_clasif_backup <- randomForest(
+  as.factor(is_zero) ~ . -song_popularity,
+  data = train_backup,
+  ntree = 300
+)
+
+# Obtener probabilidades en test
+test_backup$prob_zero <- predict(modelo_clasif_backup, newdata = test_backup, type = "prob")[,2]
+
+# Guardamos el datasets definitivos.
+train_backup<-subset(train_backup, select=-is_zero)
+test_backup<-subset(test_backup, select=-is_zero)
+datos_backup<-subset(datos_backup, select=-is_zero)
+```
+
 ### 6.3.7. Dataset final
 
 La bbdd llamada datos que será la base de datos preprocesada y con la que se trabajará en el modelado posterior. Dicha bbdd será utilizada como conjunto train en la obtención del vector de predicciones a partir del conjunto test para las submissions.
@@ -1845,8 +1878,15 @@ Esta bbdd contará con el siguiente conjunto de variables, resultado del trabajo
 
 Por otro lado, han sido aquellas instancias que hayan sido detectadas como outliers en el ensamble de metodos en su respectivo apartado, logrando así eliminar el posible sesgo que estos puedisen añadir al resultado de nuestros modelos.
 
+Además, después de haber hecho nuevas pruebas modelando con random forest, el modelo que mejores resultados nos ha proporcionado, nos hemos dado cuenta que este modelo funciona mejor otorgandole más variables por mucho que mantengan correlación moderada entre algunas de ellas. A esta bbdd le llamaremos datos_backup y, después de haber testeado el efecto de la inclusión de todas las variables, el conjunto seleccionado de este dataset y que mejor rendimiento a proporcionado és: *loudness, danceability, acousticness_boxcox,energy,audio_valence,tempo,song_duration_ms,speechiness, instrumentalness*. 
+
+Cabe destacar, que anteriormente habiamos extraido de nuestra selección de atributos algunas de las variables recien mencionadas por problemas de variabilidad reducida, correlación o asimetria. No obstante, en este trabajo priorizamos la capacidad predictiva en frente de la explicativa y concluimos que estos problemas no causan ningun efecto preocupante en el devenir de los modelos.
+
 ```{r}
-save(datos, train, test, datos_full, train_full, test_full, file = "Datos_Prepocesados.RData")
+save(datos, train, test, 
+     datos_full, train_full, test_full, 
+     datos_backup, train_backup, test_backup,
+     file = "Datos_Prepocesados.RData")
 #load("Datos_Prepocesados.RData")
 ```
 
@@ -1900,13 +1940,13 @@ results <- data.frame(
 for (i in seq_along(k_values)) {
   k <- k_values[i]
   
-  pred <- knn.reg(train= subset(train,select=-song_popularity), 
-                  test= subset(test,select=-c(song_popularity,prob_zero)),
-                  y = train$song_popularity, 
+  pred <- knn.reg(train=subset(train_backup,select=-song_popularity), 
+                  test=subset(test_backup ,select=-c(song_popularity,prob_zero)),
+                  y = train_backup$song_popularity, 
                   k = k)$pred
   
-  results$RMSE[i] <- rmse(test$song_popularity, pred)
-  results$MAPE[i] <- mape(test$song_popularity, pred)
+  results$RMSE[i] <- rmse(test_backup$song_popularity, pred)
+  results$MAPE[i] <- mape(test_backup$song_popularity, pred)
 }
 
 # Mostrar los resultados
@@ -1923,24 +1963,26 @@ best_mape <- min(results$MAPE)
 cat("Mejor k según RMSE:", best_rmse_k, " (RMSE =", best_rmse, ")\n")
 cat("Mejor k según MAPE:", best_mape_k, " (MAPE =", best_mape, ")\n")
 ```
-Dado que el valor de k que minimiza el **RMSE** es 19, y el que minimiza el **MAPE** es 3, se procede a calcular el modelo con k=19 debido a que este és el inidcador guia de nuestra trabajo.
+Dado que el valor de k que minimiza el **RMSE** es 19, y el que minimiza el **MAPE** es 1, se procede a calcular el modelo con k=19 debido a que este és el inidcador guia de nuestra trabajo.
 
 ## 7.2 Modelo con k óptimo 
 
 Se usa **k=19** como valor óptimo para realizar el *KNN*.
 
 ```{r}
-modelo_knn <- knn.reg(train= subset(train,select=-song_popularity), 
-                  test= subset(test,select=-c(song_popularity,prob_zero)),
-                  y = train$song_popularity, 
+modelo_knn <- knn.reg(train= subset(train_full,select=-song_popularity), 
+                  test= subset(test_full,select=-c(song_popularity,prob_zero)),
+                  y = train_full$song_popularity, 
                   k = 19)
 yp <- modelo_knn$pred
-y  <- test$song_popularity
+y  <- test_full$song_popularity
 
 # --- RMSE final ---
 #rmse <- sqrt(mean(e1))
 cat("RMSE del modelo con k =", 17, ":", rmse(y,yp), "\n")
 ```
+Hemos probado aplicar el modelo a nuestras tres bbdd y ha funcionado mejor con datos_full. De esto concluimos que el knn funciona mejor con menos variables, es decir, recompensa la parsiomonia.
+
 Creamos una función para evaluar el modelo con distintas metricas de dispersión y precisión de las predicciones. Esta será utilizada en los posteriores modelos para la evaluación de los mismos.
 ```{r}
 accuracy <- function(pred_fin, obs, na.rm = FALSE, 
@@ -2431,6 +2473,7 @@ accuracy(pred_train, train$song_popularity)
 cat("Métricas TEST:\n")
 accuracy(pred_test,  test$song_popularity)
 ```
+Probamos aplicar cart en las tres bbdd y vemos con cual rinde mejor.
 ```{r}
 library(rpart)
 library(rpart.plot)
@@ -2444,7 +2487,7 @@ ctrl <- trainControl(
 
 modelo_rpart <- train(
   song_popularity ~ .,
-  data = train,
+  data = train_backup,
   method = "rpart",
   trControl = ctrl,
   tuneLength = 20,
@@ -2455,22 +2498,22 @@ modelo_rpart$bestTune   # mejor cp
 modelo_rpart$finalModel
 
 # Predicciones
-pred_train <- predict(modelo_rpart, newdata = train)
-pred_test  <- predict(modelo_rpart, newdata = test)
-pred_test<- ifelse(test$prob_zero > umbral,
+pred_train <- predict(modelo_rpart, newdata = train_backup)
+pred_test  <- predict(modelo_rpart, newdata = test_backup)
+pred_test<- ifelse(test_backup$prob_zero > umbral,
                           0,          
                           pred_test)
 
 # Métricas
-accuracy(pred_train, train$song_popularity)
-(kpi_cart<-accuracy(pred_test,  test$song_popularity))
+accuracy(pred_train, train_backup$song_popularity)
+(kpi_cart<-accuracy(pred_test,  test_backup$song_popularity))
 
 # Importancia de variables
 var.imp <- varImp(modelo_rpart)
 var.imp
 plot(var.imp, main = "Importancia de variables (árbol rpart)")
 ```
-
+El mejor modelo ha sido el aplicado sobre la bbdd repreprocesada priorizando la capacidad predictiva sobre la explicativa. 
 
 ```{r arbol-podado, fig.width=8, fig.height=6}
 # Gráfico árbol final
@@ -2515,7 +2558,7 @@ for(i in 1:nrow(param_grid)){
   
   modelo <- ranger(
     formula   = song_popularity ~ .,
-    data      = train, 
+    data      = train_backup, 
     num.trees = param_grid$num_trees[i],
     mtry      = param_grid$mtry[i],
     max.depth = param_grid$max_depth[i],
@@ -2548,14 +2591,13 @@ modelo  <- ranger(
   formula   = song_popularity ~ .,
   data      = train,
   num.trees = 5000,
-  mtry=3,
+  mtry=2,
   max.depth = 20,
   importance= "impurity",
   seed      = 123
 )
-print(modelo)
+#print(modelo)
 predicciones <- predict(modelo,data = test)
-predicciones
 importancia_pred <- modelo$variable.importance
 sort(importancia_pred,decreasing=TRUE)
 ```
@@ -2575,14 +2617,13 @@ modelo_full  <- ranger(
   formula   = song_popularity ~ .,
   data      = train_full,
   num.trees = 5000,
-  mtry=3,
+  mtry=2,
   max.depth = 20,
   importance= "impurity",
   seed      = 123
 )
-print(modelo_full)
+#print(modelo_full)
 predicciones_full <- predict(modelo_full,data = test_full)
-predicciones_full
 importancia_pred_full <- modelo_full$variable.importance
 sort(importancia_pred_full,decreasing=TRUE)
 ```
@@ -2592,11 +2633,38 @@ pred_reg_full<-predicciones_full$predictions
 pred_RF_full <- ifelse(test_full$prob_zero > umbral,
                           0,          
                           pred_reg_full) 
-(kpi_RF<-accuracy(pred_RF_full, test_full$song_popularity))
+accuracy(pred_RF_full, test_full$song_popularity)
 ```
 Vemos que el modelo sin eliminar los potenciales outliers presenta un mejor rendimiento que añadiendolos.
 
 Por lo tanto escogemos el modelo con la bbbdd completa.
+
+#### 10.1.2.3. RF backup
+```{r}
+set.seed(123)
+modelo_backup  <- ranger(
+  formula   = song_popularity ~ .,
+  data      = train_backup,
+  num.trees = 5000,
+  mtry=2,
+  max.depth = 20,
+  importance= "impurity",
+  seed      = 123
+)
+#print(modelo_full)
+predicciones_backup <- predict(modelo_backup,data = test_backup)
+importancia_pred_backup <- modelo_backup$variable.importance
+sort(importancia_pred_backup,decreasing=TRUE)
+```
+KPI's
+```{r}
+pred_reg_backup<-predicciones_backup$predictions
+pred_RF_backup <- ifelse(test_backup$prob_zero > umbral,
+                          0,          
+                          pred_reg_backup) 
+(kpi_RF<-accuracy(pred_RF_backup, test_backup$song_popularity))
+```
+
 ## 10.2. Boosting
 
 ### 10.2.1. GBM
@@ -2630,44 +2698,46 @@ accuracy(pred_Boosting,test$song_popularity)
 
 
 ### 10.2.2. Caret
+
+Probamos modelar sobre las 3 bbdd. (se muestra el codigo con el mejor rendimiento de los 3 trazados internamente)
 ```{r}
 library(caret)
 set.seed(1234)
 trControl<-trainControl(method="cv", number=5)
-caret.gbm0 <- train(song_popularity ~ ., method = "gbm", data = train,
+caret.gbm0 <- train(song_popularity ~ ., method = "gbm", data = train_backup,
                     trControl = trControl, verbose = FALSE)
 caret.gbm0
 ```
 ```{r}
 tuneGrid <- data.frame(n.trees =  100, interaction.depth = 3, 
                        n.minobsinnode = 10, shrinkage = c(0.3, 0.1, 0.05, 0.01, 0.005))
-caret.gbm1 <- train(song_popularity ~ ., method = "gbm", data = train,
+caret.gbm1 <- train(song_popularity ~ ., method = "gbm", data = train_backup,
                     tuneGrid = tuneGrid, trControl = trControl, verbose = FALSE)
 caret.gbm1
 ```
 Predicciones
 ```{r}
-pred_boost_caret <- predict(caret.gbm1, newdata = test)
-pred_boost_caret <- ifelse(test$prob_zero > umbral,
+pred_boost_caret <- predict(caret.gbm1, newdata = test_backup)
+pred_boost_caret <- ifelse(test_backup$prob_zero > umbral,
                           0,          
                           pred_boost_caret)
-(kpi_boost<-accuracy(pred_boost_caret, test$song_popularity))
+(kpi_boost<-accuracy(pred_boost_caret, test_backup$song_popularity))
 ```
 ### 10.2.3. Xboost
 ```{r}
 library(caret)
 caret.xgb <- train(song_popularity ~ ., method = "xgbTree", 
-                   data = train, trControl = trControl, verbosity = 0)
+                   data = train_backup, trControl = trControl, verbosity = 0)
 caret.xgb
 caret.xgb$bestTune
 ```
 Predicciones
 ```{r}
-pred_xgboost<-predict(caret.xgb, newdata=test)
-pred_xgboost <- ifelse(test$prob_zero > umbral,
+pred_xgboost<-predict(caret.xgb, newdata=test_backup)
+pred_xgboost <- ifelse(test_backup$prob_zero > umbral,
                           0,          
                           pred_xgboost)
-accuracy(pred_xgboost, test$song_popularity)
+accuracy(pred_xgboost, test_backup$song_popularity)
 ```
 
 # 11. SVM
@@ -2727,8 +2797,8 @@ svm_cv$best.parameters
 Probamos sin key3. Despues extraemos también liveness_boxcox y, por último speechiness.
 ```{r}
 svm_cv_2 <- tune("svm",
-               song_popularity ~ .-key3-liveness_boxcox-speechiness,
-               data = train,
+               song_popularity ~ .,
+               data = train_backup,
                kernel = "radial",
                ranges = list(
                  cost = 1,
@@ -2736,7 +2806,6 @@ svm_cv_2 <- tune("svm",
                ))
 summary(svm_cv_2)
 ```
-
 Con esto hemos conseguido que el la confirguración de parámetros óptima es un coste = 1 y una gamma = 0.01. Este codigo no se volverá a ejecutar debido a su gran coste computacional y que ha tardado 2 horas en procesar. Por lo tanto tenemos ya creado el archivo con el resultado del tuneo.
 
 Generamos un gráfico del error en función de C (cost) y gamma que permite interpretar qué combinaciones funcionan mejor.
@@ -2769,18 +2838,18 @@ pred_svm <- ifelse(test$prob_zero > umbral,
 ```
 ```{r}
 modelo_svm_opt_2 <- svm_cv_2$best.model
-pred_svm_2 <- predict(modelo_svm_opt_2, newdata = test)
-pred_svm_2 <- ifelse(test$prob_zero > umbral,
+pred_svm_2 <- predict(modelo_svm_opt_2, newdata = test_backup)
+pred_svm_2 <- ifelse(test_backup$prob_zero > umbral,
                   0,          
                   pred_svm_2)
 # Calculamos los KPIs finales
-(kpi_SVM<-accuracy(pred_svm_2, obs))
+(kpi_SVM<-accuracy(pred_svm_2, test_backup$song_popularity))
 ```
 Nos quedamos con el modelo sin key3, liveness_boxcox y speechiness después de haber hecho la reducción del conjunto de variables paso a paso.
 
 Gráfico de valores observados vs predichos
 ```{r}
-plot(obs, pred_svm_opt,
+plot(test_backup$song_popularity, pred_svm_2,
      main = "Real vs Predicho (SVM óptimo)",
      xlab = "Observado",
      ylab = "Predicho")
@@ -2788,12 +2857,69 @@ plot(obs, pred_svm_opt,
 
 Gráfico de residuos (errores)
 ```{r}
-plot(obs - pred_svm_opt,
+plot(test_backup$song_popularity - pred_svm_2,
      main = "Errores del modelo SVM",
      ylab = "Residuals")
 ```
 
 # 12. Mejor modelo
+
+Hemos obtenido estos resultados de cada una de las 3 bases de datos disponible (datos_full, datos, datos_backup) en cada uno de los modelos. 
+```{r}
+library(dplyr)
+library(gt)
+
+res_rmse <- tibble(
+  Modelo = c("KNN", "CART", "RF", "BOOSTING", "SVM"),
+  Full   = c(21.9302, 21.6173, 21.0822, 21.4933, 21.7712),
+  Datos  = c(21.9734, 21.8506, 21.1420, 21.5290, 21.7215),
+  Backup = c(22.0245, 21.3278, 20.5327, 20.9921, 21.3644)
+)
+
+tabla_rmse <- res_rmse %>%
+  gt() %>%
+  tab_header(
+    title = md("**Comparación de Modelos Predictivos**"),
+    subtitle = "RMSE en Full / Datos / Backup"
+  ) %>%
+  tab_spanner(
+    label = "RMSE",
+    columns = c(Full, Datos, Backup)
+  ) %>%
+  fmt_number(
+    columns = c(Full, Datos, Backup),
+    decimals = 4
+  ) %>%
+  cols_align(
+    align = "center",
+    columns = everything()
+  ) %>%
+  cols_width(
+    Modelo ~ px(160),
+    everything() ~ px(120)
+  ) %>%
+  tab_style(
+    style = cell_text(weight = "bold"),
+    locations = cells_column_labels(everything())
+  ) %>%
+  # Resaltar el mínimo (mejor) de cada columna
+  tab_style(
+    style = cell_fill(color = "#E8F5E9"),
+    locations = list(
+      cells_body(columns = Full,   rows = Full   == min(Full)),
+      cells_body(columns = Datos,  rows = Datos  == min(Datos)),
+      cells_body(columns = Backup, rows = Backup == min(Backup))
+    )
+  )
+
+tabla_rmse
+
+```
+Vemos que en knn el mejor rendimiento lo ha dado el modelo en el que se ha usado la selección de variables inicial salida del preprocesamiento, hecho que evidencia la importancia que le da este metoddo a la parsimonia del dataset. 
+
+Por otro lado, para el resto de modelos, la bbdd con la selección final de variables priorizando la capacidad predictiva ha rendido por encima de las otras dos. 
+
+A parte, en los 5 casos no se han quitado los outliers, con lo que concluimos que su presencia no afecta negativamente en la calidad de las predicciones de los algoritmos
 
 Tabla resumen
 ```{r}
@@ -3147,11 +3273,18 @@ TEST_final$key3<-ifelse(TEST$key == 3, 1, 0)
 
 Selección final
 ```{r}
-TEST<-TEST_final[,c("speechiness","liveness_boxcox", "acousticness_boxcox", "danceability", "audio_valence","key3")]
+TEST<-TEST_final[,c("speechiness","liveness_boxcox", "acousticness_boxcox", "danceability", "audio_valence","key3","outlier")]
 TEST$song_popularity<-TEST_backup$song_popularity
 ```
 
-Creación de la prob_zero
+Creacion bbdd con y sin outliers
+```{r}
+TEST_full <- TEST
+TEST <- subset(TEST, outlier == 0)
+TEST <- subset(TEST, select=-outlier)
+```
+
+Creación de la prob_zero para TEST
 ```{r}
 # Crear variable binaria para el modelo de clasificación
 datos$is_zero <- ifelse(datos$song_popularity == 0, 1, 0)
@@ -3174,6 +3307,65 @@ umbral <- 0.5
 # Eliminamos la variable is_zero del conjunto datos (TRAIN)
 datos<-subset(datos, select=-is_zero)
 ```
+
+Creación de la prob_zero para TEST_full
+```{r}
+# Crear variable binaria para el modelo de clasificación
+datos_full$is_zero <- ifelse(datos_full$song_popularity == 0, 1, 0)
+
+# Entrenar un modelo clasificador para predecir ceros
+library(randomForest)
+
+modelo_clasif_full <- randomForest(
+  as.factor(is_zero) ~ .,
+  data = subset(datos_full, select=-song_popularity),
+  ntree = 300
+)
+
+# Obtener probabilidades en test
+TEST_full$prob_zero <- predict(modelo_clasif_full, newdata = TEST_full, type = "prob")[,2]
+
+## umbral, de 0.5
+umbral <- 0.5
+
+# Eliminamos la variable is_zero del conjunto datos (TRAIN)
+datos_full<-subset(datos_full, select=-is_zero)
+```
+
+Creación de la prob_zero para TEST_backup. Llamaremos _BACKUP para no sobreescribir sobre _backup.
+```{r}
+# Seleccionamos las variables 
+datos_BACKUP <- subset(datos_backup, 
+                       select = -c(ID,outlier,audio_mode,key,liveness,time_signature))
+TEST_BACKUP  <- subset(TEST_backup, 
+                       select = -c(ID,outlier,audio_mode,key,liveness,time_signature))
+
+# La única transformación que mejora el modelo es la de acousticness
+datos_BACKUP$acousticness<-datos_full$acousticness_boxcox
+TEST_BACKUP$acousticness<-TEST_full$acousticness_boxcox
+
+# Crear variable binaria para el modelo de clasificación
+datos_BACKUP$is_zero <- ifelse(datos_BACKUP$song_popularity == 0, 1, 0)
+
+# Entrenar un modelo clasificador para predecir ceros
+library(randomForest)
+
+modelo_clasif_BACKUP <- randomForest(
+  as.factor(is_zero) ~ .,
+  data = subset(datos_BACKUP, select=-song_popularity),
+  ntree = 300
+)
+
+# Obtener probabilidades en test
+TEST_BACKUP$prob_zero <- predict(modelo_clasif_BACKUP, newdata = TEST_BACKUP, type = "prob")[,2]
+
+## umbral, de 0.5
+umbral <- 0.5
+
+# Eliminamos la variable is_zero del conjunto datos (TRAIN)
+datos_BACKUP<-subset(datos_BACKUP, select=-is_zero)
+```
+
 ## 13.5. Modelos 
 
 ### 13.5.1. KNN
@@ -3184,26 +3376,11 @@ library(FNN)
 ```
 
 ```{r}
-modelo_knn_TEST <- knn.reg(train = subset(datos, select=-song_popularity),
-                           test = subset(TEST, select=-prob_zero), 
-                           y = datos$song_popularity, 
+modelo_knn_TEST <- knn.reg(train = subset(datos_full, select=-song_popularity),
+                           test = subset(TEST_full, select=-prob_zero), 
+                           y = datos_full$song_popularity, 
                            k = 19)
 yp <- modelo_knn_TEST$pred
-```
-
-```{r}
-# Crear dataframe de submission
-submission4 <- data.frame(id = TEST_num$ID, "song_popularity" = yp)
-
-# Exportar a CSV (sin comillas ni índice)
-write.table(submission4, 
-            file = "submission1.csv", 
-            sep = ",",              # separador por comas
-            row.names = FALSE, 
-            col.names = TRUE, 
-            quote = FALSE, 
-            dec = "."               # punto como separador decimal
-)
 ```
 
 ### 13.5.2. CART
@@ -3218,7 +3395,7 @@ library(tree)
 
 Arbol básico
 ```{r}
-tree_rpart <- rpart(song_popularity ~ ., data = datos, method = "anova")
+tree_rpart <- rpart(song_popularity ~ ., data = datos_BACKUP, method = "anova")
 summary(tree_rpart)
 
 # Ver el árbol en una ventana nueva
@@ -3229,7 +3406,7 @@ Arbol grande más poda con cp
 ```{r}
 tree_big <- rpart(
   song_popularity ~ .,
-  data    = datos,
+  data    = datos_BACKUP,
   method  = "anova",
   control = rpart.control(cp = 0)
 )
@@ -3257,25 +3434,8 @@ importance
 ```
 Predicciones
 ```{r}
-pred_cart  <- predict(tree_opt, newdata = TEST)
+pred_cart  <- predict(tree_opt, newdata = TEST_BACKUP)
 ```
-
-Submission cart
-```{r}
-# Crear dataframe de submission
-submission11 <- data.frame(ID = TEST_num$ID, "song_popularity" = pred_cart)
-
-# Exportar a CSV (sin comillas ni índice)
-write.table(submission11, 
-            file = "submission11.csv", 
-            sep = ",",              # separador por comas
-            row.names = FALSE, 
-            col.names = TRUE, 
-            quote = FALSE, 
-            dec = "."               # punto como separador decimal
-)
-```
-
 
 ### 13.5.3. RF
 
@@ -3287,23 +3447,23 @@ param_grid = expand.grid(num_trees = c(50, 100, 500, 1000, 5000),
              mtry= c(2,3,4,5),max_depth = c(1, 3, 10, 20))
 head(param_grid)
 ```
-Ajustamos un modelo con cada combinación de la grid
+Ajustamos un modelo con cada combinación de la grid (hecho una vez solo debido a coste computacional alto)
 ```{r}
-oob_error = rep(NA, nrow(param_grid))
+#oob_error = rep(NA, nrow(param_grid))
 
-for(i in 1:nrow(param_grid)){
+#for(i in 1:nrow(param_grid)){
   
-  modelo <- ranger(
-    formula   = song_popularity ~ .,
-    data      = datos, 
-    num.trees = param_grid$num_trees[i],
-    mtry      = param_grid$mtry[i],
-    max.depth = param_grid$max_depth[i],
-    seed      = 123
-  )
+#  modelo <- ranger(
+#    formula   = song_popularity ~ .,
+#    data      = datos_BACKUP, 
+#    num.trees = param_grid$num_trees[i],
+#    mtry      = param_grid$mtry[i],
+#    max.depth = param_grid$max_depth[i],
+#    seed      = 123
+#  )
   
-  oob_error[i] <- sqrt(modelo$prediction.error)
-}
+#  oob_error[i] <- sqrt(modelo$prediction.error)
+#}
 ```
 Resultados
 ```{r}
@@ -3318,28 +3478,27 @@ head(resultados[,4])
 p<-which(resultados[,4]==min(resultados[,4]))
 resultados[p,]
 ```
-Bosque óptimo
+Bosque óptimo (num_trees= 5000, mtry=3, max_depth=20)
 ```{r}
 set.seed(123)
 modelo  <- ranger(
-  formula   = song_popularity ~ .-key3,
-  data      = datos,
+  formula   = song_popularity ~ .,
+  data      = datos_BACKUP,
   num.trees = 5000,
-  mtry=2,
+  mtry=3,
   max.depth = 20,
   importance= "impurity",
   seed      = 123
 )
-print(modelo)
-predicciones <- predict(modelo,data = TEST)
-predicciones
+#print(modelo)
+predicciones <- predict(modelo,data = TEST_BACKUP)
 importancia_pred <- modelo$variable.importance
 sort(importancia_pred,decreasing=TRUE)
 ```
 
 ```{r}
 pred_reg<-predicciones$predictions
-RF <- ifelse(TEST$prob_zero > umbral,
+RF <- ifelse(TEST_BACKUP$prob_zero > umbral,
                           0,          
                           pred_reg) 
 ```
@@ -3347,11 +3506,11 @@ RF <- ifelse(TEST$prob_zero > umbral,
 Submission rf 
 ```{r}
 # Crear dataframe de submission
-submission8 <- data.frame(ID = TEST_num$ID, "song_popularity" = RF)
+submission12 <- data.frame(ID = TEST_num$ID, "song_popularity" = RF)
 
 # Exportar a CSV (sin comillas ni índice)
-write.table(submission8, 
-            file = "submission8.csv", 
+write.table(submission12, 
+            file = "submission12.csv", 
             sep = ",",              # separador por comas
             row.names = FALSE, 
             col.names = TRUE, 
@@ -3366,7 +3525,7 @@ Con caret
 library(caret)
 set.seed(1234)
 trControl<-trainControl(method="cv", number=5)
-caret.gbm0 <- train(song_popularity ~ ., method = "gbm", data = datos,
+caret.gbm0 <- train(song_popularity ~ ., method = "gbm", data = datos_BACKUP,
                     trControl = trControl, verbose = FALSE)
 caret.gbm0
 ```
@@ -3374,36 +3533,21 @@ caret.gbm0
 ```{r}
 tuneGrid <- data.frame(n.trees =  100, interaction.depth = 3, 
                        n.minobsinnode = 10, shrinkage = c(0.3, 0.1, 0.05, 0.01, 0.005))
-caret.gbm1 <- train(song_popularity ~ ., method = "gbm", data = datos,
+caret.gbm1 <- train(song_popularity ~ ., method = "gbm", data = datos_BACKUP,
                     tuneGrid = tuneGrid, trControl = trControl, verbose = FALSE)
 caret.gbm1
 ```
 
 Predicciones
 ```{r}
-pred_boost <- predict(caret.gbm1, newdata = TEST)
-```
-
-```{r}
-# Crear dataframe de submission
-submission10 <- data.frame(ID = TEST_num$ID, "song_popularity" = pred_boost)
-
-# Exportar a CSV (sin comillas ni índice)
-write.table(submission10, 
-            file = "submission10.csv", 
-            sep = ",",              # separador por comas
-            row.names = FALSE, 
-            col.names = TRUE, 
-            quote = FALSE, 
-            dec = "."               # punto como separador decimal
-)
+pred_boost <- predict(caret.gbm1, newdata = TEST_BACKUP)
 ```
 
 ### 13.5.5. SVM
 ```{r}
 svm_cv_TEST <- tune("svm",
-               song_popularity ~ .-key3-liveness_boxcox-speechiness,
-               data = datos,
+               song_popularity ~ .,
+               data = datos_BACKUP,
                kernel = "radial",
                ranges = list(
                  cost = 1,
@@ -3414,23 +3558,8 @@ summary(svm_cv_TEST)
 
 ```{r}
 modelo_svm_opt_TEST <- svm_cv_TEST$best.model
-pred_svm_TEST <- predict(modelo_svm_opt_TEST, newdata = TEST)
-pred_svm_TEST <- ifelse(TEST$prob_zero > umbral,
+pred_svm_TEST <- predict(modelo_svm_opt_TEST, newdata = TEST_BACKUP)
+pred_svm_TEST <- ifelse(TEST_BACKUP$prob_zero > umbral,
                   0,          
                   pred_svm_TEST)
-```
-
-```{r}
-# Crear dataframe de submission
-submission9 <- data.frame(ID = TEST_num$ID, "song_popularity" = pred_svm_TEST)
-
-# Exportar a CSV (sin comillas ni índice)
-write.table(submission9, 
-            file = "submission9.csv", 
-            sep = ",",              # separador por comas
-            row.names = FALSE, 
-            col.names = TRUE, 
-            quote = FALSE, 
-            dec = "."               # punto como separador decimal
-)
 ```
